#taski 1,2,3 Vaated uuendatud, routing töötab

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,11 @@
   <meta charset="utf-8">
   <title>ExpenseReportFrontend</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading...</app-root>
 </body>
 </html>
